# LunarYueEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-en.md  README-zh.md  README.md  build_linux.sh  build_windows.bat  ubmodule status
engine/: CMakeLists.txt
engine/asset/global/: particle.global.json
engine/asset/level/: default.level
engine/asset/material/: gold.material.json  silver.material.json  white.material.json
engine/asset/objects/environment/: fence.object.json  floor.object.json  stairs.object.json  wall.object.json  wall_block.object.json  wall_with_door.object.json  wall_with_window.object.json
engine/asset/world/: hello.world
engine/configs/deployment/: LunarYueEditor.ini
engine/configs/development/: LunarYueEditor.ini  test.ini
engine/shader/: CMakeLists.txt  detect_new_shaders.cmake  gen_shader.cmake
engine/shader/glsl/: color_grading.frag  combine_ui.frag  fs_mesh.sc  mesh_gbuffer.frag  particle_emit.comp  vs_debugdraw.sc  vs_debugdraw_lines.vs  vs_mesh.sc
engine/shader/include/: gbuffer.h  mesh_lighting.h  mesh_lighting.inl
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: axis.h  editor.h  editor_actions.h  editor_asset_browser.h  editor_context.h  editor_detail_window.h  editor_file_service.h  editor_global_context.h  editor_input_manager.h  editor_launcher.h  editor_menu_bar.h  editor_object_window.h  editor_panels_manager.h  editor_scene_manager.h  editor_scene_view.h  editor_ui.h  editor_ui_utils.h  editor_view.h  editor_view_controllable.h
engine/source/editor/source/: axis.cpp  editor.cpp  editor_asset_browser.cpp  editor_context.cpp  editor_detail_window.cpp  editor_file_service.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_launcher.cpp  editor_menu_bar.cpp  editor_object_window.cpp  editor_scene_manager.cpp  editor_scene_view.cpp  editor_ui.cpp  editor_ui_utils.cpp  editor_view.cpp  editor_view_controllable.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/test/: CMakeLists.txt
engine/source/test/include/: editor.h
engine/source/test/resource/: LunarYueEditor.rc  LunarYueEditorDefaultLayout.ini
engine/source/test/source/: editor.cpp  main.cpp
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
source/editor/editor_core/: CMakeLists.txt  core.cpp
source/editor/editor_core/gui/: CMakeLists.txt  gui.cpp  gui.h
source/editor/editor_core/mesh_import/: CMakeLists.txt
source/editor/editor_core/nativefd/: CMakeLists.txt  filedialog.cpp  filedialog.h
source/editor/editor_runtime/: CMakeLists.txt  main.cpp
source/editor/editor_runtime/assets/: asset_compiler.cpp  asset_compiler.h  asset_extensions.h  mesh_importer.cpp  mesh_importer.h
source/editor/editor_runtime/console/: console_log.cpp  console_log.h
source/editor/editor_runtime/editing/: editing_system.cpp  editing_system.h  picking_system.cpp  picking_system.h
source/editor/editor_runtime/interface/: gui_system.cpp  gui_system.h
source/editor/editor_runtime/rendering/: debugdraw_system.cpp  debugdraw_system.h
source/editor/editor_runtime/system/: app.cpp  app.h  events.cpp  events.h  project_manager.cpp  project_manager.h
source/editor/editor_test/: CMakeLists.txt  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  main.cpp
source/engine/core/: CMakeLists.txt
source/engine/core/audio/: CMakeLists.txt  device.cpp  device.h  exception.h  library.h  listener.cpp  listener.h  logger.cpp  logger.h  sound.cpp  sound.h  sound_data.cpp  sound_data.h  sound_info.h  source.cpp  source.h  types.h  utils.cpp  utils.h
source/engine/core/cmd_line/: CMakeLists.txt  parser.hpp
source/engine/core/common_lib/: CMakeLists.txt  assert.hpp  basetypes.hpp  bitflags.hpp  hash.hpp
source/engine/core/config/: CMakeLists.txt  cfg.h
source/engine/core/console/: CMakeLists.txt  console.cpp  console.h
source/engine/core/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h  filesystem_cache.hpp  filesystem_syncer.cpp  filesystem_syncer.h  filesystem_watcher.cpp  filesystem_watcher.h
source/engine/core/graphics/: CMakeLists.txt  debugdraw.cpp  debugdraw.h  format.cpp  format.h  frame_buffer.cpp  frame_buffer.h  graphics.cpp  graphics.h  handle_impl.h  index_buffer.cpp  index_buffer.h  program.cpp  program.h  render_pass.cpp  render_pass.h  render_view.cpp  render_view.h  render_view_keys.cpp  render_view_keys.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex_buffer.cpp  vertex_buffer.h  vertex_decl.cpp  vertex_decl.h
source/engine/core/logging/: CMakeLists.txt  logging.cpp  logging.h
source/engine/core/math/: CMakeLists.txt  bbox.cpp  bbox.h  bbox_extruded.cpp  bbox_extruded.h  bsphere.cpp  bsphere.h  frustum.cpp  frustum.h  math_includes.h  math_types.h  plane.cpp  plane.h  transform.h  transform_t.hpp
source/engine/core/memory/: CMakeLists.txt  checked_delete.h
source/engine/core/reflection/: CMakeLists.txt  reflection.h  registration.h
source/engine/core/serialization/: CMakeLists.txt  associative_archive.h  binary_archive.h  serialization.cpp  serialization.h
source/engine/core/signals/: CMakeLists.txt  event.hpp
source/engine/core/simulation/: CMakeLists.txt  simulation.cpp  simulation.h
source/engine/core/string_utils/: CMakeLists.txt  string_utils.cpp  string_utils.h
source/engine/core/system/: CMakeLists.txt  subsystem.cpp  subsystem.h
source/engine/core/tasks/: CMakeLists.txt  future_traits.hpp  task_system.cpp  task_system.h
source/engine/core/uuid/: CMakeLists.txt  uuid.hpp
source/engine/runtime/: CMakeLists.txt
source/engine/runtime/animation/: animation.h
source/engine/runtime/assets/: asset_flags.h  asset_handle.h  asset_manager.cpp  asset_manager.h  asset_storage.h
source/engine/runtime/ecs/: ecs.cpp  ecs.h
source/engine/runtime/input/: input.cpp  input.h  (+1 more)
(+736 files in other folders)
